--- a/META.yml
+++ b/META.yml
@@ -6,12 +6,12 @@ author:
 build_requires:
   File::Spec: 0
   HTTP::Request: 0
+  HTTP::Request::Common: 0
   Plack::Builder: 0
   Plack::Middleware::ErrorDocument: 0
   Plack::Test: 0
   Test::More: 0.98
   Test::Warn: 0
-  utf8: 0
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
@@ -27,6 +27,7 @@ requires:
   HTTP::Status: 0
   Plack::MIME: 0
   Plack::Middleware: 0
+  Plack::Middleware::Debug::Base: 0
   Plack::Request: 0.994
   Plack::Util::Accessor: 0
   Scalar::Util: 0
@@ -36,4 +37,4 @@ requires:
 resources:
   bugtracker: https://github.com/ranguard/Plack-Middleware-TemplateToolkit/issues
   repository: https://github.com/ranguard/Plack-Middleware-TemplateToolkit
-version: 0.15
+version: 0.2
