--- a/dist.ini
+++ b/dist.ini
@@ -4,12 +4,11 @@ copyright_year   = 2011
 author           = Leo Lapworth
 author           = Jakob Voss
 copyright_holder = Leo Lapworth
-version          = 0.2
+version          = 0.25
 
 [@Basic]
 [InstallGuide]
 [MetaJSON]
-[PruneCruft]
 [PkgVersion]
 
 [MetaResources]
@@ -20,8 +19,7 @@ repository.type   = git
 
 [NoTabsTests]
 ; [EOLTests]
-[ExtraTests]
-[PodCoverageTests]
+; [PodCoverageTests]
 [PodSyntaxTests]
 
 [AutoPrereqs]
