Import of LLAP/Plack-Middleware-TemplateToolkit-0.26 from CPAN.
gitpan-cpan-distribution: Plack-Middleware-TemplateToolkit
gitpan-cpan-version:      0.26
gitpan-cpan-path:         LLAP/Plack-Middleware-TemplateToolkit-0.26.tar.gz
gitpan-cpan-author:       LLAP
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -15,7 +15,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300000, CPAN::Meta::Converter version 2.110930001'
+generated_by: 'Dist::Zilla version 4.300018, CPAN::Meta::Converter version 2.120921'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -42,4 +42,4 @@ requires:
 resources:
   bugtracker: https://github.com/ranguard/Plack-Middleware-TemplateToolkit/issues
   repository: https://github.com/ranguard/Plack-Middleware-TemplateToolkit
-version: 0.25
+version: 0.26
